--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^9.6.0",
+		"@types/node": "^24.0.11",
 		"@types/prismjs": "^1.26.5",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^0.21.16",
@@ -47,5 +48,8 @@
 		"typescript-eslint": "^8.0.0",
 		"unocss": "^0.64.1",
 		"vite": "^5.0.3"
+	},
+	"dependencies": {
+		"@emailjs/browser": "^4.4.1"
 	}
 }
