--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
 		"lucide-svelte": "^0.460.1",
+		"marked": "^17.0.1",
 		"marked-gfm-heading-id": "^4.1.1",
 		"marked-mangle": "^1.1.10",
 		"mode-watcher": "^1.1.0",
