--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"@types/node": "^24.0.11",
 		"@types/prismjs": "^1.26.5",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "^2.15.4",
+		"bits-ui": "0.21.16",
 		"clsx": "^2.1.1",
 		"dompurify": "^3.2.1",
 		"embla-carousel-svelte": "^8.4.0",
@@ -35,7 +35,7 @@
 		"marked": "^17.0.1",
 		"marked-gfm-heading-id": "^4.1.1",
 		"marked-mangle": "^1.1.10",
-		"mode-watcher": "^1.1.0",
+		"mode-watcher": "0.4.1",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
@@ -62,6 +62,9 @@
 	},
 	"overrides": {
 		"cookie": "^0.7.0",
-		"esbuild": "^0.25.0"
+		"esbuild": "^0.25.0",
+		"@melt-ui/svelte": {
+			"svelte": "$svelte"
+		}
 	}
 }
